--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
       }
     ],
     "require": {
-        "drupal/core": "^8.7",
+        "drupal/core": "^8.7.7 || ^9",
         "drupal/mailchimp": "^1.9"
     },
     "require-dev": {
