--- a/mailchimphelper.info.yml
+++ b/mailchimphelper.info.yml
@@ -3,6 +3,7 @@ type: module
 description: Extra features for Mailchimp.
 package: Mailchimp
 core: 8.x
+core_version_requirement: ^8.7.7 || ^9
 
 dependencies:
  - mailchimp:mailchimp (>=8.x-1.10)
