--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "drupal/core": "^8.7.7 || ^9",
-        "drupal/mailchimp": "^1.9"
+        "drupal/mailchimp": "^1.9 || ^2.0"
     },
     "require-dev": {
         "bex/behat-screenshot": "^1.2",
