--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
       }
     ],
     "require": {
-        "drupal/core": "^8.7.7 || ^9",
-        "drupal/mailchimp": "^1.9 || ^2.0"
+        "drupal/core": "^9 || ^10",
+        "drupal/mailchimp": "^2.0"
     },
     "require-dev": {
         "bex/behat-screenshot": "^1.2",
