--- a/mailchimphelper.info.yml
+++ b/mailchimphelper.info.yml
@@ -2,7 +2,7 @@ name: Mailchimp Helper
 type: module
 description: Extra features for Mailchimp.
 package: Mailchimp
-core_version_requirement: ^8.7.7 || ^9
+core_version_requirement: ^9 || ^10
 
 dependencies:
- - mailchimp:mailchimp (>=8.x-1.10)
+ - mailchimp:mailchimp
